# samurai

./: .gitignore  BRANCHES_ANALYSIS.md  CLAUDE.md  CMakeLists.txt  FEASIBILITY_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  README.md  README_PYTHON_BINDINGS.md  TESTING.md  analysis_mpi_communications.md  buggy_command.txt  commands.sh  compare_case.sh  compare_compilation_time.sh  compile_commands.sh  configure_clang.sh  configure_debug.sh  configure_gcc.sh  configure_verif.sh  example_aggregated_communication.hpp  factorization_strategies.md  feedback.md  objectif.md  parse.py  recommendations_implementation.md  report.md  test_inplace_operators.cpp  thrust.md  unify_amr.md  vtune-report
demos/FiniteVolume/: AMR_Burgers_Hat.cpp  CMakeLists.txt  advection_1d.cpp  advection_2d.cpp  advection_2d_uniform.cpp  advection_2d_user_bc.cpp  advection_utils.hpp  advection_utils.ixx  benchmark_aggregated_comm.cpp  burgers.cpp  burgers_mra.cpp  burgers_os.cpp  debug_example.cpp  heat.cpp  heat_heterogeneous.cpp  heat_nonlinear.cpp  level_set.cpp  level_set_from_scratch.cpp  lid_driven_cavity.cpp  linear_convection.cpp  linear_convection_obstacle.cpp  manual_block_matrix_assembly.cpp  nagumo.cpp  output_demo.cpp  scalar_burgers_2d.cpp  serialize.cpp  stokes_2d.cpp  test.cpp
demos/FiniteVolume/BZ/: bz_2d.cpp
include/samurai/csir_cuda/: CMakeLists.txt
include/samurai/csir_cuda/benchmark/: benchmark_1d.cu  benchmark_2d.cu  benchmark_3d.cu
include/samurai/csir_cuda/demo/: demo_1d.cu  demo_2d.cu  demo_3d.cu
include/samurai/csir_cuda/src/: csir_cuda.cu  csir_cuda.cuh
include/samurai/csir_demo/: CMakeLists.txt  README.md  csir.hpp
include/samurai/csir_unified/: CMakeLists.txt  README.md  benchmark_1d.cpp  benchmark_2d.cpp  demo_1d.cpp  main.cpp  main_3d.cpp  test_csir.cpp  test_csir_1d.cpp  test_csir_3d.cpp  test_subset_like.cpp
include/samurai/csir_unified/benchmark/: CMakeLists.txt  benchmark_1d.cpp  benchmark_2d.cpp  benchmark_3d.cpp  samurai_benchmark_1d.cpp  samurai_benchmark_2d.cpp  samurai_benchmark_3d.cpp
include/samurai/csir_unified/benchmark/results/: after.json  after.txt  after2.json  after2d_r5_0p1s.json  after2d_r5_0p1s.txt  after_r5_0p1s.json  after_r5_0p1s.txt  before.json  before.txt
include/samurai/csir_unified/demo/: CMakeLists.txt  demo_1d.cpp  main.cpp  main_3d.cpp
include/samurai/csir_unified/src/: .csir.hpp.swp  csir.hpp
include/samurai/csir_unified/test/: CMakeLists.txt  test_csir.cpp  test_csir_1d.cpp  test_csir_3d.cpp  test_subset_like.cpp  test_utils.hpp
python/: .gitignore  API_NAMING.md  BUILD_SYSTEM_MIGRATION.md  CHANGES_SUMMARY.txt  CMakeLists.txt  CONSTANTS_SUMMARY_TABLE.md  FIELD_NAMESPACE_API.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_v0.30.md  MIGRATION_SCRIPT_SUMMARY.md  OPERATORS_SUBMODULE_SUMMARY.md  POC_MUTATION_RESULTS.md  POC_MUTATION_SEMANTICS.md  PROGRESS_BAR_API.md  PROGRESS_IMPLEMENTATION_COMPLETE.md  PROGRESS_QUICK_START.md  QUICKSTART.md  README.md  README_CONSTANTS.md  REFACTORING_GUIDE.md  SAMURAI_CONSTANTS_ANALYSIS.md  VISUAL_SUMMARY.txt  XTENSOR_ARCHITECTURE_DIAGRAMS.md  XTENSOR_DECISION_SUMMARY.md  XTENSOR_PYTHON_ANALYSIS.md  analyze_ghost_cells.py  compare.py  conftest.py  debug_ghost_cells.py  demo_kwargs_improvements.py  dev.bat  dev.py  mypy.ini  pyproject.toml  read_mesh.py  read_stats.py  ruff.toml  test_apply_upwind.py  test_apply_upwind.py.bak  (+11 more)
python/.github/workflows/: ci.yml
python/benchmarks/: benchmark_poc_inplace.py
python/conda-recipe/: meta.yaml
python/docs/: PYTHON_3.14_FIXES.md  SAMURAI_PYTHON_MIGRATION_PLAN.md
python/examples/: PROGRESS_BAR_EXAMPLES.md  advection.py  advection_2d.py  advection_2d_progress.py  box_demo.py  burgers.py  burgers_2d.py  burgers_2d_progress.py  burgers_2d_simple.py  convection.py  demo_progress.py  demo_visualization.py  linear_convection.py  linear_convection_obstacle.py
python/examples/legacy/: advection_2d.py  advection_2d_progress.py  burgers_2d.py  burgers_2d_progress.py  burgers_2d_simple.py  linear_convection.py  linear_convection_obstacle.py
python/scripts/: MIGRATION_GUIDE.md  README.md  config_validator.py  migrate_to_field_namespace.py
python/src/bindings/: adapt_bindings.cpp  algorithm_bindings.cpp  bc_bindings.cpp  box_bindings.cpp  common_types.hpp  domain_builder_bindings.cpp  domain_builder_bindings.hpp  field_bindings.cpp  interval_bindings.cpp  io_bindings.cpp  main.cpp  mesh_bindings.cpp  mesh_config_bindings.cpp  mra_config_bindings.cpp  operator_bindings.cpp
python/src/samurai/: __init__.py  utils.py
python/src/samurai_python/: __init__.py
python/src/samurai_python/utils/: __init__.py
python/src/samurai_python/utils/progress/: __init__.py  (+2 more)
python/tests/: POC_DELIVERABLES.md  POC_TEST_GUIDE.md  conftest.py  test_adapt.py  test_auto_detection.py  test_basic.py  test_bc.py  test_box.py  test_field.py  test_field_arithmetic.py  test_field_arithmetic.py.bak  test_field_helpers.py  test_field_namespace_api.py  test_fields.py  test_for_each_cell.py  test_for_each_interval.py  test_generic_box.py  test_interval.py  test_io.py  test_mesh.py  test_mesh_config.py  test_mra_config.py  test_poc_inplace_ops.py  test_progress.py  test_simple_api.py  test_standalone.py  test_vector_fields.py  test_vectorfield_setitem.py  test_vectorfield_setitem.py.bak  test_vectorfield_weno5.py  test_vectorfield_weno5.py.bak  test_vectorfield_weno5_simple.py  test_vectorfield_weno5_simple.py.bak
python/viz/: samplotlib.py
src/python_bindings/: CMakeLists.txt  box_bindings.cpp  cell_bindings.cpp  field_bindings.cpp  vector_field_bindings.cpp
tests/: CMakeLists.txt  conftest.py  main.cpp  test_bc.cpp  test_box.cpp  test_cell.cpp  test_cell_array.cpp  test_cell_list.cpp  test_common.hpp  test_common_utils.cpp  test_demo_finite_volume.py  test_demo_p4est.py  test_demo_pablo.py  test_demo_tutorial.py  test_field.cpp  test_find.cpp  test_hdf5.cpp  test_interval.cpp  test_uniform_mesh.cpp
tests/cuda/: test_cuda_additional.cpp  test_cuda_backend.cpp
tests/long_run/: README.md
tests/neuromesh/: test_neuromesh.cpp
(+192 files in other folders)
