# Samurai Python Bindings - pyproject.toml
#
# This file configures the build system for the standalone samurai-python package.
# It uses scikit-build-core for modern CMake-based Python package building.
#
# Build:
#   pip install .               # Build from source
#   pip install -e .            # Editable install (development)
#   python -m build             # Build wheel
#
# Requirements:
#   - samurai C++ library must be installed and findable by CMake
#   - CMake >= 3.20
#   - C++20 compiler
#   - Python >= 3.9

[build-system]
requires = [
    "scikit-build-core >=0.10.0",
    "pybind11 >=2.13.0",
    "cmake >=3.20",
    "ninja >=1.10; platform_system!='Windows'",
]
build-backend = "scikit_build_core.build"

[project]
name = "samurai-python"
version = "0.30.0"
description = "Python bindings for Samurai AMR library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Samurai Development Team", email = "samurai@lists.sciencesconf.org"},
]
maintainers = [
    {name = "Samurai Development Team", email = "samurai@lists.sciencesconf.org"},
]
keywords = [
    "AMR",
    "adaptive-mesh-refinement",
    "multiresolution",
    "finite-volume",
    "lattice-boltzmann",
    "scientific-computing",
    "PDE",
    "numerical-methods",
    "HPC",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]

# Runtime dependencies
dependencies = [
    "numpy >=1.20",
]

[project.optional-dependencies]
# Test dependencies
test = [
    "pytest >=7.0",
    "pytest-cov >=3.0",
    "h5py >=3.0",
]

# Development dependencies
dev = [
    "samurai-python[test]",
    "black >=22.0",
    "isort >=5.0",
    "mypy >=1.0",
    "pre-commit >=3.0",
    "ruff >=0.1.0",
]

# Documentation dependencies
docs = [
    "sphinx >=5.0",
    "sphinx-rtd-theme >=1.0",
    "breathe >=4.0",
    "myst-parser >=0.18",
]

# Visualization dependencies
viz = [
    "matplotlib >=3.0",
    "ipywidgets >=7.0",
]

# Progress bar dependencies
progress = [
    "tqdm >=4.60",
]

# All optional dependencies
all = [
    "samurai-python[test,dev,docs,viz,progress]",
]

[project.urls]
Homepage = "https://github.com/hpc-maths/samurai"
Documentation = "https://hpc-math-samurai.readthedocs.io"
Repository = "https://github.com/hpc-maths/samurai"
Issues = "https://github.com/hpc-maths/samurai/issues"
Changelog = "https://github.com/hpc-maths/samurai/blob/main/CHANGELOG.md"

# ============================================================================
# SCIKIT-BUILD-CORE CONFIGURATION
# ============================================================================

[tool.scikit-build]
minimum-version = "build-system"
cmake.source-dir = "."
build-dir = "build/{wheel_tag}"

# Use Ninja for faster builds (except on Windows)
cmake.args = ["-GNinja"]

# Build in release mode for optimization
cmake.build-type = "Release"

# Set verbose output for debugging
cmake.verbose = false
logging.level = "INFO"

# Build in parallel
jobs = 4

# Wheel configuration
wheel.py-api = "py3"
wheel.install-dir = "samurai"

# Don't build isolated (allows finding installed samurai)
build.tool-args = [
    "-DSAMURAI_PYTHON_STANDALONE=ON",
]

# Strip symbols for smaller wheel size (comment out for debugging)
# strip = true

# Strict compatibility mode
strict-config = true

# Experimental features
experimental = ["warnings"]

# ============================================================================
# VERSION CONFIGURATION
# ============================================================================

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../version.txt"
regex = "(?P<version>.+)"

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================

[tool.coverage.run]
source = ["src/samurai_python"]
omit = [
    "tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ============================================================================
# BLACK CONFIGURATION
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
)/
'''

# ============================================================================
# ISORT CONFIGURATION
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["samurai", "samurai_python"]
skip_gitignore = true

# ============================================================================
# MYPY CONFIGURATION
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "h5py.*"
ignore_missing_imports = true

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "SIM"]
"__init__.py" = ["F401"]

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Command line options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-W", "ignore::DeprecationWarning",
]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "viz: marks tests that require visualization libraries",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# BUMPVERSION CONFIGURATION
# ============================================================================

[tool.bumpversion]
current_version = "0.30.0"
commit = true
tag = true
message = "Bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{old_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/bindings/main.cpp"
search = "#define SAMURAI_PYTHON_VERSION \"{old_version}\""
replace = "#define SAMURAI_PYTHON_VERSION \"{new_version}\""

# ============================================================================
# CIBUILDWHEEL CONFIGURATION (for building wheels across platforms)
# ============================================================================

[tool.cibuildwheel]
# Skip 32-bit builds and PyPy
skip = ["pp*", "*-win32", "*-manylinux_i686"]
# Test command to run after building
test-command = "python -c 'import samurai_python; print(samurai_python.__version__)'"
test-extras = ["test"]
# Environment variables
environment = { CMAKE_ARGS = "-DSAMURAI_PYTHON_STANDALONE=ON" }

# Build options for different platforms
[tool.cibuildwheel.linux]
# Use manylinux2014 for broad compatibility
archs = ["x86_64", "aarch64"]
before-all = "yum install -y cmake ninja-build || apt-get update && apt-get install -y cmake ninja-build"

[tool.cibuildwheel.macos]
# Build for x86_64 and arm64 (Apple Silicon)
archs = ["x86_64", "arm64"]
before-all = "brew install cmake ninja"

[tool.cibuildwheel.windows]
# Build for x86_64 only
archs = ["AMD64"]
environment = { CMAKE_ARGS = "-DSAMURAI_PYTHON_STANDALONE=ON -A x64" }
